--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@microsoft/signalr": "^7.0.4"
   }
 }
