--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@microsoft/signalr": "^7.0.4"
+    "@microsoft/signalr": "^7.0.4",
+    "@types/lodash": "^4.14.195",
+    "lodash": "^4.17.21"
   }
 }
